Apache HttpClient Sample Code Test